<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_baseline_perm_device_information_24"
        android:title="Information"/>

    <item
        android:id="@+id/nav_light"
        android:icon="@drawable/ic_baseline_highlight_24"
        android:title="light"/>

    <item
        android:id="@+id/nav_colour"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="exit"/>

</menu>