<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA33030">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:padding="4dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Change Light"
        android:textAlignment="center"
        android:textSize="30dp" />

</RelativeLayout>